--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "cypress": "^9.2.0",
     "date-fns": "^2.27.0",
     "momentjs": "^2.0.0",
     "prop-types": "^15.7.2",
