--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "cd client && npm run test",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "dbReset": "node db/resetdb.js",
